# node

./: .clang-format  .gitignore  .gitpod.yml  .yamllint.yaml  BSDmakefile  android-configure  android_configure.py  codecov.yml  configure  eslint.config.mjs  node.gni  pyproject.toml  tsconfig.json  unofficial.gni  vcbuild.bat
typings/: globals.d.ts  primordials.d.ts
typings/internalBinding/: async_wrap.d.ts  fs.d.ts
